--- a/compose.yml
+++ b/compose.yml
@@ -1,10 +1,22 @@
 services:
+  # ==== 1. The Gateway (Public Face) ====
+  # Only THIS service has permission to open ports.
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "8080:80" # Web Traffic (Browser/Postman)
+      - "27017:27017" # Data Traffic (Compass/TablePlus)
+    volumes:
+      # Web overwrite the default config entirely
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - api
+      - mongo
+
+  # ==== 2. The API Fleet (Private) ====
   api:
     build: .
-    container_name: go-api-dev
     restart: always
-    ports:
-      - "8080:8080"
     environment:
       SEEDER_URL: "http://seeder:8081"
       MONGO_URI: "mongodb://${MONGO_ROOT_USER}:${MONGO_ROOT_PASSWORD}@mongo:27017"
@@ -15,12 +27,10 @@ services:
       mongo:
         condition: service_healthy
     command: ["air", "-c", ".air.api.toml"]
-  # === Service 2: Seeder
+
+  # ==== 3. Seeder ====
   seeder:
     build: . # Uses the SAME Dockerfile!
-    container_name: go-seeder-dev
-    ports:
-      - "8081:8081"
     environment:
       API_QUEUE_URL: "http://api:8080"
       G_SEARCH: ${G_SEARCH}
@@ -34,11 +44,10 @@ services:
         condition: service_started
     command: ["air", "-c", ".air.seeder.toml"]
 
+  # 4. Mongo DB.
   mongo:
     image: mongo:8.2.2
     restart: always
-    ports:
-      - "27017"
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_USER}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD}
@@ -64,11 +73,10 @@ services:
       retries: 5
       start_period: 60s
 
+  # 5. postgresql
   postgres:
     image: postgres:18.1
     restart: always
-    ports:
-      - "5432"
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
